--- a/shippable.yml
+++ b/shippable.yml
@@ -167,20 +167,7 @@ jobs:
                   -var SHIP_REL_VER=$SHIP_REL_VER
                   -var FAM_NAME=$FAM_NAME
                   packer.json
-            - >
-                packer build -machine-readable
-                  -var service_account_json=$SERVICE_ACCOUNT_JSON
-                  -var region=$REGION
-                  -var source_image_family=$SOURCE_IMAGE_FAMILY
-                  -var machine_type=$MACHINE_TYPE
-                  -var zone=$ZONE
-                  -var project_id=$PROJECT_ID
-                  -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}"
-                  -var RES_IMG_VER_NAME=$SHIP_REL_VER
-                  -var RES_IMG_VER_NAME_DASH=$SHIP_REL_VER
-                  -var SHIP_REL_VER=$SHIP_REL_VER
-                  -var FAM_NAME=$FAM_NAME
-                  packer.json 2>&1 | tee output.txt
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var source_image_family=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var RES_IMG_VER_NAME=$SHIP_REL_VER -var RES_IMG_VER_NAME_DASH=$SHIP_REL_VER -var SHIP_REL_VER=$SHIP_REL_VER -var FAM_NAME=$FAM_NAME packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -232,32 +219,8 @@ jobs:
             - export RES_IMG_VER_NAME=$(shipctl get_resource_version_key u14_x86_64_gcp_img_prep RES_IMG_VER_NAME)
             - export RES_IMG_VER_NAME_DASH=$(shipctl get_resource_version_key u14_x86_64_gcp_img_prep RES_IMG_VER_NAME_DASH)
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - >
-                packer validate
-                  -var service_account_json=$SERVICE_ACCOUNT_JSON
-                  -var region=$REGION
-                  -var source_image_family=$SOURCE_IMAGE_FAMILY
-                  -var machine_type=$MACHINE_TYPE
-                  -var zone=$ZONE
-                  -var project_id=$PROJECT_ID
-                  -var RES_IMG_VER_NAME=$RES_IMG_VER_NAME
-                  -var RES_IMG_VER_NAME_DASH=$RES_IMG_VER_NAME_DASH
-                  -var SHIP_REL_VER=$RES_IMG_VER_NAME
-                  -var FAM_NAME=$FAM_NAME
-                  packer.json
-            - >
-                packer build -machine-readable
-                  -var service_account_json=$SERVICE_ACCOUNT_JSON
-                  -var region=$REGION
-                  -var source_image_family=$SOURCE_IMAGE_FAMILY
-                  -var machine_type=$MACHINE_TYPE
-                  -var zone=$ZONE
-                  -var project_id=$PROJECT_ID
-                  -var RES_IMG_VER_NAME=$RES_IMG_VER_NAME
-                  -var RES_IMG_VER_NAME_DASH=$RES_IMG_VER_NAME_DASH
-                  -var SHIP_REL_VER=$RES_IMG_VER_NAME
-                  -var FAM_NAME=$FAM_NAME
-                  packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var source_image_family=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var RES_IMG_VER_NAME=$RES_IMG_VER_NAME -var RES_IMG_VER_NAME_DASH=$RES_IMG_VER_NAME_DASH -var SHIP_REL_VER=$RES_IMG_VER_NAME -var FAM_NAME=$FAM_NAME packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var source_image_family=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var RES_IMG_VER_NAME=$RES_IMG_VER_NAME -var RES_IMG_VER_NAME_DASH=$RES_IMG_VER_NAME_DASH -var SHIP_REL_VER=$RES_IMG_VER_NAME -var FAM_NAME=$FAM_NAME packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -307,33 +270,8 @@ jobs:
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - export IMAGE_NAMES=$(cat images.txt)
             - export IMAGE_NAMES_SPACED=$(eval echo $(tr '\n' ' ' < images.txt))
-            - >
-               packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON
-                 -var region=$REGION
-                 -var source_image_family=$SOURCE_IMAGE_FAMILY
-                 -var machine_type=$MACHINE_TYPE
-                 -var zone=$ZONE
-                 -var project_id=$PROJECT_ID
-                 -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}"
-                 -var RES_IMG_VER_NAME=$SHIP_REL_VER
-                 -var RES_IMG_VER_NAME_DASH=$SHIP_REL_VER
-                 -var SHIP_REL_VER=$SHIP_REL_VER
-                 -var FAM_NAME=$FAM_NAME
-                 packer.json
-            - >
-                packer build -machine-readable
-                  -var service_account_json=$SERVICE_ACCOUNT_JSON
-                  -var region=$REGION
-                  -var source_image_family=$SOURCE_IMAGE_FAMILY
-                  -var machine_type=$MACHINE_TYPE
-                  -var zone=$ZONE
-                  -var project_id=$PROJECT_ID
-                  -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}"
-                  -var RES_IMG_VER_NAME=$SHIP_REL_VER
-                  -var RES_IMG_VER_NAME_DASH=$SHIP_REL_VER
-                  -var SHIP_REL_VER=$SHIP_REL_VER
-                  -var FAM_NAME=$FAM_NAME
-                  packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var source_image_family=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var RES_IMG_VER_NAME=$SHIP_REL_VER -var RES_IMG_VER_NAME_DASH=$SHIP_REL_VER -var SHIP_REL_VER=$SHIP_REL_VER -var FAM_NAME=$FAM_NAME packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var source_image_family=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var RES_IMG_VER_NAME=$SHIP_REL_VER -var RES_IMG_VER_NAME_DASH=$SHIP_REL_VER -var SHIP_REL_VER=$SHIP_REL_VER -var FAM_NAME=$FAM_NAME packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
@@ -385,31 +323,8 @@ jobs:
             - export RES_IMG_VER_NAME=$(shipctl get_resource_version_key u16_x86_64_gcp_img_prep RES_IMG_VER_NAME)
             - export RES_IMG_VER_NAME_DASH=$(shipctl get_resource_version_key u16_x86_64_gcp_img_prep RES_IMG_VER_NAME_DASH)
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - >
-                packer validate
-                  -var service_account_json=$SERVICE_ACCOUNT_JSON
-                  -var region=$REGION
-                  -var source_image_family=$SOURCE_IMAGE_FAMILY
-                  -var machine_type=$MACHINE_TYPE
-                  -var zone=$ZONE
-                  -var project_id=$PROJECT_ID
-                  -var RES_IMG_VER_NAME=$RES_IMG_VER_NAME
-                  -var RES_IMG_VER_NAME_DASH=$RES_IMG_VER_NAME_DASH
-                  -var SHIP_REL_VER=$RES_IMG_VER_NAME
-                  -var FAM_NAME=$FAM_NAME
-                  packer.json
-            - >
-                packer build -machine-readable
-                  -var service_account_json=$SERVICE_ACCOUNT_JSON
-                  -var region=$REGION
-                  -var source_image_family=$SOURCE_IMAGE_FAMILY
-                  -var machine_type=$MACHINE_TYPE
-                  -var zone=$ZONE -var project_id=$PROJECT_ID
-                  -var RES_IMG_VER_NAME=$RES_IMG_VER_NAME
-                  -var RES_IMG_VER_NAME_DASH=$RES_IMG_VER_NAME_DASH
-                  -var SHIP_REL_VER=$RES_IMG_VER_NAME
-                  -var FAM_NAME=$FAM_NAME
-                    packer.json 2>&1 | tee output.txt
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var source_image_family=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var RES_IMG_VER_NAME=$RES_IMG_VER_NAME -var RES_IMG_VER_NAME_DASH=$RES_IMG_VER_NAME_DASH -var SHIP_REL_VER=$RES_IMG_VER_NAME -var FAM_NAME=$FAM_NAME packer.json
+            - packer build -machine-readable -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var source_image_family=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var RES_IMG_VER_NAME=$RES_IMG_VER_NAME -var RES_IMG_VER_NAME_DASH=$RES_IMG_VER_NAME_DASH -var SHIP_REL_VER=$RES_IMG_VER_NAME -var FAM_NAME=$FAM_NAME packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
             - popd
     on_success:
