--- a/shippable.yml
+++ b/shippable.yml
@@ -425,7 +425,7 @@ jobs:
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: c7_x86_64_gcp_img_patch
+      - IN: c7_x86_64_gcp_img_prep
       - IN: node_repo
       - IN: cexec_repo
       - IN: reqProc_x86_64_Ubuntu_16_04_prep
