--- a/shippable.yml
+++ b/shippable.yml
@@ -1764,8 +1764,8 @@ jobs:
       - IN: windowsbaseami_winrm_keys
         switch: off
       - IN: w16_img
-      - IN: w16_dotnetcore_img
-      - IN: w16_aspnetcore_img
+      - IN: w16dotnetcore_img
+      - IN: w16aspnetcore_img
       - IN: reqProc_x86_64_WindowsServer_2016_prep
       - TASK:
           script:
