--- a/shippable.yml
+++ b/shippable.yml
@@ -1210,7 +1210,7 @@ jobs:
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - REL_VER: "master"
-                - WINRM_USERNAME: "Administrator"
+                - WINRM_USERNAME: "packer_user"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/WindowsServer_2016/prep
             - export REL_VER_DASH=${REL_VER//./-}
