--- a/shippable.yml
+++ b/shippable.yml
@@ -1151,7 +1151,7 @@ jobs:
                 - ZONE: "us-east1-b"
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
-                - SSH_USER: "centos"
+                - WINRM_USERNAME: "packer_user"
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")/gcp/x86_64/WindowsServer_2016/patch
             - shipctl copy_file_from_resource_state "w2k16_x86_64_gcp_img_prep" "images.txt" .
